fix(list) align controls action buttons to bottom

--- a/resources/css/list.css
+++ b/resources/css/list.css
@@ -71,5 +71,10 @@ table.data-list {
         a[type="disabled"] {
             @apply cursor-not-allowed opacity-50;
         }
+
+        .form-actions,
+        .form-actions > * {
+            @apply self-end;
+        }
     }
 }
